infra/k8s/book-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        app: book
    spec:
      containers:
      - name: book
        image: book-app:latest
        ports:
        - containerPort: 8081
