infra/k8s/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: user-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8083
        - containerPort: 9091
