infra/k8s/postgres-book.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-book
spec:
  selector:
    app: postgres-book
  ports:
  - port: 5433
    targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-book
spec:
  selector:
    matchLabels:
      app: postgres-book
  template:
    metadata:
      labels:
        app: postgres-book
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        emptyDir: {}
