infra/k8s/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  - name: grpc
    port: 9091
    targetPort: 9091
