infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: traefik
  rules:
  - host: estudo.local
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8082
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8083
      - path: /book
        pathType: Prefix
        backend:
          service:
            name: book-service
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book-service
            port:
              number: 8081
